; ModuleID = '/home/carl/AnghaBench/git/extr_run-command.c_child_die.c'
source_filename = "/home/carl/AnghaBench/git/extr_run-command.c_child_die.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.child_err = type { i32, i32 }

@errno = common dso_local global i32 0, align 4
@child_notifier = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @child_die to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @child_die(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.child_err, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = getelementptr inbounds %struct.child_err, %struct.child_err* %3, i32 0, i32 0
  store i32 %4, i32* %5, align 4
  %6 = load i32, i32* @errno, align 4
  %7 = getelementptr inbounds %struct.child_err, %struct.child_err* %3, i32 0, i32 1
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* @child_notifier, align 4
  %9 = call i32 @xwrite(i32 %8, %struct.child_err* %3, i32 8)
  %10 = call i32 @_exit(i32 1) #3
  unreachable
}

declare dso_local i32 @xwrite(i32, %struct.child_err*, i32) #1

; Function Attrs: noreturn
declare dso_local i32 @_exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
